--- a/style.css
+++ b/style.css
@@ -19,6 +19,6 @@ body {
   border-left: 1px solid black;
   border-right: 1px solid black;
   margin-left: auto;
-  margin-right; auto;
+  margin-right: auto;
   max-width: 600px;
 }
