--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ html {
 body { 
   border-left: 1px solid black;
   border-right: 1px solid black;
-  margin-left: auto;
-  margin-right: auto;
-  max-width: 600px;
+  margin-left: 10px;
+  margin-right: 10px;
+  max-width: 320px;
 }
