--- a/style.css
+++ b/style.css
@@ -15,10 +15,8 @@ html {
   font-family: sans-serif;
 }
 
-body { 
-  border-left: 1px solid black;
-  border-right: 1px solid black;
-  margin-left: 10px;
-  margin-right: 10px;
-  max-width: 320px;
+body {
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 600px;
 }
